# krazimo-assignment-1

intelligent-code-reviewer/: .gitignore  ImplementationPlan.md  README.md  TESTING_PLAN.md
intelligent-code-reviewer/backend/: pyproject.toml  requirements.txt  run.py  simple_rag_test.py  test_rag_pipeline_integration.py
intelligent-code-reviewer/backend/app/: main.py
intelligent-code-reviewer/backend/app/api/: admin.py  analysis.py  main.py
intelligent-code-reviewer/backend/app/core/: config.py
intelligent-code-reviewer/backend/app/db/: database.py  session.py
intelligent-code-reviewer/backend/app/models/: analysis.py  api_models.py  sql_models.py
intelligent-code-reviewer/backend/app/playbooks/: __init__.py  base_playbook.py  circular_dependencies.py  dependency_health.py  god_classes.py  hardcoded_secrets.py  high_complexity.py  idor_vulnerabilities.py
intelligent-code-reviewer/backend/app/services/: agent_integration.py  agent_orchestrator.py  ai_agent.py  code_retriever.py  code_splitter.py  database.py  progress_tracker.py  rag_pipeline.py  vector_store.py
intelligent-code-reviewer/backend/app/tools/: __init__.py  architecture_analyzer.py  base_tool.py  code_quality_checker.py  complexity_analyzer.py  dependency_analyzer.py  performance_analyzer.py  security_scanner.py  static_analyzer.py
intelligent-code-reviewer/backend/manual_scripts/: README.md  __init__.py  test_analysis.py  test_analysis_simple.py
intelligent-code-reviewer/backend/tests/: conftest.py  test_api.py  test_database_service.py  test_models.py
(+3 files in other folders)
